--- a/apps/editor/index.html
+++ b/apps/editor/index.html
@@ -5,13 +5,34 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>Editor.js Demo</title>
 </head>
 
-<body>
+<body class="bg-indigo-100">
   <div id="react"></div>
-  <div id="editor"></div>
-  <script type="module" src="/src/main.tsx"></script>
+
+  <div class="flex w-full justify-center">
+    <div>
+      <div class="my-6 flex w-full justify-between">
+        <h1 class="text-indigo-700 font-extrabold text-4xl mr-4">Editor.js Demo</h1>
+        <div>
+          <!-- <button
+            class="inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-base font-medium text-gray-700 shadow-sm hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+            Preview
+          </button> -->
+          <button id="save"
+            class="inline-flex items-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
+            Save
+          </button>
+        </div>
+      </div>
+      <div class="bg-white shadow-lg rounded px-8 prose lg:prose-xl">
+        <!-- Render Editor here -->
+        <div id="editor"></div>
+      </div>
+
+    </div>
+    <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
